Tue Aug  6 17:42:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_conv_from_wchar): converted string to CP_UTF8
	  should have UTF-8 encoding.  otherwise no conversion takes place
	  later.

Tue Aug  6 17:21:38 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_push_frame): fix stack overflow check codes.
	  Stack overflow check should be done *after* pushing a stack frame.
	  However, some stack overflow checking codes checked *before*
	  pushing a stack frame with iseq->stack_max.
	  To solve this problem, add a new parameter `stack_max' to specify
	  a possible consuming stack size.

	* vm_core.h (CHECK_VM_STACK_OVERFLOW0): add to share the stack overflow
	  checking code.

	* insns.def: catch up this change.

	* vm.c, vm_eval.c: ditto.

	* test/ruby/test_exception.rb: add a stack overflow test.
	  This code is reported by nobu.

Tue Aug  6 17:02:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_conv_from_wchar): use WideCharToMultiByte(),
	  as like as mbstr_to_wstr(), in the first step of the convertion from
	  WCHAR.

Tue Aug  6 16:14:32 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_eval.c (eval_string_with_cref): copy cref to limit the scope of
	  refienements in the eval string. [ruby-core:56329] [Bug #8722]

	* test/ruby/test_refinement.rb: related test.

Tue Aug  6 12:23:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_realloc): Use VALGRIND_MAKE_MEM_UNDEFINED to
	  declare undefined memory area.
	  (bignew_1): Ditto.

	* internal.h (VALGRIND_MAKE_MEM_DEFINED): Moved from gc.c
	  (VALGRIND_MAKE_MEM_UNDEFINED): Ditto.

Tue Aug  6 01:40:37 2013  Zachary Scott  <e@zzak.io>

	* process.c: [DOC] Document caveats of command form of Process.spawn
	  with regard to the shell and OS. Patched by Steve Klabnik [Bug #8550]

Tue Aug  6 01:28:35 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/0.9.rb: [DOC] Typo in example [Bug #8732]

Tue Aug  6 01:22:37 2013  Zachary Scott  <e@zzak.io>
