@@ -250,6 +250,18 @@ class TestRange < Test::Unit::TestCase
   def test_first_last
     assert_equal([0, 1, 2], (0..10).first(3))
     assert_equal([8, 9, 10], (0..10).last(3))
+    assert_equal(0, (0..10).first)
+    assert_equal(10, (0..10).last)
+    assert_equal("a", ("a".."c").first)
+    assert_equal("c", ("a".."c").last)
+
+    bug8739 = '[ruby-dev:47587] [Bug #8739] from exclusive range'
+    assert_equal([0, 1, 2], (0...10).first(3), bug8739)
+    assert_equal([7, 8, 9], (0...10).last(3), bug8739)
+    assert_equal(0, (0...10).first, bug8739)
+    assert_equal(9, (0...10).last, bug8739)
+    assert_equal("a", ("a"..."c").first, bug8739)
+    assert_equal("b", ("a"..."c").last, bug8739)
   end
 
   def test_to_s
